# rust-cef-runtime

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
docs/: examples.md  platforms.md
examples/: demo.rs  dom.rs  files-cors.rs  server.rs  wasm.rs  webgl2.rs
examples/common/: frontend.rs
examples/demo/: README.md  basic.js  index.html  main.js
examples/dom/: index.html
examples/dom-multi/: index.html
examples/dom-single/: README.md  index.html
examples/wasm/: index.html
examples/webgl2/: main.js
kurogane/: Cargo.toml
kurogane-cli/: Cargo.toml
kurogane-cli/src/: dev.rs  init.rs  install.rs  main.rs
kurogane/src/: ipc_renderer.rs
runtime/: Cargo.toml
runtime/examples/: benchmark.rs  dom.rs  ipc.rs  package.rs  wasm.rs  webgl2.rs
runtime/examples/benchmark/: index.html  rust-cef-runtime.js
runtime/examples/demo/: index.html  rust-cef-runtime.js
runtime/examples/dom/: README.md
runtime/examples/ipc/: index.html  rust-cef-runtime.js
runtime/examples/wasm/: demo.rs  demo.wasm  main.js
runtime/examples/webgl2/: index.html
runtime/src/: app.rs  browser.rs  cef_app.rs  client.rs  error.rs  fs_pool.rs  ipc_browser.rs  ipc_renderer.rs  ipc_shm.rs  lib.rs  runtime.rs  scheme.rs  window.rs
src/: app.rs  browser.rs  cef_app.rs  client.rs  error.rs  ipc_browser.rs  ipc_renderer.rs  lib.rs  main.ts  runtime.rs  scheme.rs  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: resolver.rs
tests/: Cargo.toml
tests/files-cors/: vite.config.ts
tools/cef-installer/: Cargo.toml
(+1 files in other folders)
