[package]
name = "kurogane-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kurogane"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
download-cef = "2.3"
include_dir = "0.7.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
